test locationEndpoint